--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  loggy: ^2.0.3
+  flutter_screenutil: ^5.8.4
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1
+  provider: ^6.0.5
+  package_info_plus: ^5.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
